try implement mode

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </style>
 <script src="https://kit.fontawesome.com/fa2321cbaa.js" crossorigin="anonymous"></script>
 <script src="main.bc.js"></script>
+<script src="mode-dtt.js"></script>
 </head>
 <body>
 <div id="all">
@@ -85,7 +86,7 @@ check p_or_q
       showPrintMargin: false
     })
     editor.setOptions({
-      mode: "",
+      mode: "ace/mode/dtt",
     })
 
 
