Add overview to code to specs

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ check p_or_q
       showPrintMargin: false
     })
     editor.setOptions({
-      mode: "",
+      mode: "ace/mode/dtt",
     });
     
     var Range = ace.require("ace/range").Range;
