Change all references to cs4215_dependent_types and dtt to lambdacplus

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>Dependent Type Theory</title>
+<title>λC+ proof assistant</title>
 <style type="text/css" media="screen">
     #all { 
         display: grid;
@@ -91,7 +91,7 @@ check p_or_q
       showPrintMargin: false
     })
     editor.setOptions({
-      mode: "ace/mode/dtt",
+      mode: "ace/mode/lambdacplus",
     });
     
     var Range = ace.require("ace/range").Range;
