Switch cdn for ace editor and rename sample_programs -> sample_proofs

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ check p_or_q
   <a href="https://aellym0.github.io/lambdacplus/docs/dev/odoc" target="_blank" class="link-btn"><i class="fas fa-book"></i></a>
 </div>
 </div>
-<script src="https://pagecdn.io/lib/ace/1.4.12/ace.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.min.js"
+ type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = ace.edit("editor");
     var output = ace.edit("output");
